--- a/web pages/course.html
+++ b/web pages/course.html
@@ -53,10 +53,12 @@
                     Total Registration Fee: 
                     <span id="total">$0</span>
                 </div>
-                
                 <button type="submit">Submit Registration</button>
+                <br>
+                <br>
+                ---- results will be displayed here ----
+                <div class="message-box"></div>
             </form>
-            <div id="messageBox"></div>
         </div>
         <script src="script.js"></script>
     </body>
